<resources>
    <string name="app_name">光辉</string>
    <string name="welcome">欢迎使用競商勿忧</string>
    <string name="edition">光辉</string>
    <string name="cd">picture</string>
    <string name="hint" />
    <string name="jswy">競商勿忧</string>
    <string name="empty_hint" />
    <string name="content" />
    <string name="copyright">"使用条款:
1.必须XXXX
2.必须遵守XXX"</string>
    <string name="copyright2">Copyright © 2012 – 2017 競商勿忧，版权所有\n公司电话:0551-64312312</string>
    <string name="teach_confirm">开始使用競商勿忧</string>
    <string name="_register_message">您的移动终端未注册，未注册的终端不能使用。可注册数量取决于您购买的数量。</string>
    <string name="last_load_time">上次同步时间：</string>
    <string name="net_select">是否允许使用非WiFi网络同步或上传大数据：</string>
    <string name="goods_search_result">商品检索结果显示：</string>
    <string name="goods_search_key">当前检索关键字：</string>
    <string name="customer_search_key">当前检索关键字：</string>
    <string name="work_department_set">当前工作部门：</string>
    <string name="work_warehouse_nobatch">本地开单的默认仓库。当前设置：</string>
    <string name="goods_select_more_add_string">商品多选模式数量设置。当前设置：</string>
    <string name="doc_item_order_key">设置销售明细中商品的排序方式。当前排序方式：</string>
    <string name="clear_last_zero">打印时是否保留数值小数点后末尾的零。当前设置：</string>
    <string name="cancel_goods_show">打印时退货商品数量显示为负数。当前设置：</string>
    <string name="print_barcode_set">打印商品条码和备注信息，商品名称单独一行打印时有效。当前设置：</string>
    <string name="printer_model_select">打印机型号：</string>
    <string name="k_0">0</string>
    <string name="k_1">1</string>
    <string name="k_2">2</string>
    <string name="k_3">3</string>
    <string name="k_4">4</string>
    <string name="k_5">5</string>
    <string name="k_6">6</string>
    <string name="k_7">7</string>
    <string name="k_8">8</string>
    <string name="k_9">9</string>
    <string name="k_dot">.</string>
    <string name="k_del">删</string>
    <string name="k_minus">-</string>
    <string name="k_clear">清</string>
    <string name="k_cancel">取消</string>
    <string name="load_basic_data">load_basic_data</string>
    <string name="load_customer_data">load_customer_data</string>
    <string name="load_customer_doc_data">load_customer_doc_data</string>
    <string name="customer_check_select">customer_check_select</string>
    <string name="net_setting">net_setting</string>
    <string name="goods_check_select">goods_check_select</string>
    <string name="work_department">work_department</string>
    <string name="work_warehouse">work_warehouse</string>
    <string name="open_doc_set">open_doc_set</string>
    <string name="instruckment">instruckment</string>
    <string name="company">company</string>
    <string name="item_order">item_order</string>
    <string name="goods_select_more_add">goods_select_more_add</string>
    <string name="tips">tips</string>
    <string name="clear_goods_record">clear_goods_record</string>
    <string name="clear_database">clear_database</string>
    <string name="pre_price3e">pre_price</string>
    <string name="pre_number">pre_number</string>
    <string name="clear_fields_record">clear_fields_record</string>
    <string name="default_printer">default_printer</string>
    <string name="bluetoothPrintIsShow">bluetoothPrintIsShow</string>
    <string name="combinationItem">combinationItem</string>
    <string name="printer_model">printer_model</string>
    <string name="print_mode">print_mode</string>
    <string name="clearlastzero">clearlastzero</string>
    <string name="minustuihuo">minustuihuo</string>
    <string name="printbarcode">printbarcode</string>
    <string name="offline_user">offline_user</string>
    <string name="switch_user">切换用户</string>
    <string name="log_off">注销</string>
    <string name="exchange_store">部门选择</string>
    <string name="infobook">介绍</string>
    <string name="go_home">主面板</string>
    <string name="exit">关闭程序</string>
    <string name="clear">清空</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="remote_record_and_dir">抄单记录(保存在SD卡下抄单文件夹下)</string>
    <string name="customer_name">客户名称</string>
    <string name="visit_line">巡店路线</string>
    <string name="visit_line_customer">当前巡店路线客户:</string>
    <string name="pinyin_code">拼音编码</string>
    <string name="customer_contact">客户电话</string>
    <string name="customer_telephone">固定电话</string>
    <string name="customer_type">客户分类</string>
    <string name="customer_region">所属地区</string>
    <string name="customer_visitline">巡店路线</string>
    <string name="bank_name">开户银行</string>
    <string name="bank_account">银行账户</string>
    <string name="customer_remark">客户备注</string>
    <string name="all">全部</string>
    <string name="browse">查看</string>
    <string name="edit">编辑</string>
    <string name="_pifa">批发</string>
    <string name="batchPrice">批发单价</string>
    <string name="salePrice">经销单价</string>
    <string name="averagePrice">最低售价</string>
    <string name="conversionRatio">换算比例</string>
    <string name="extraSalePrice1">价格体系一</string>
    <string name="extraSalePrice2">价格体系二</string>
    <string name="extraSalePrice3">价格体系三</string>
    <string name="extraSalePrice4">价格体系四</string>
    <string name="salecue">销售提示</string>
    <string name="_linshou">零售</string>
    <string name="add_customer">新增客户</string>
    <string name="storefront">门店</string>
    <string name="customer">客户</string>
    <string name="telephone">电话</string>
    <string name="truck_number">车号</string>
    <string name="hint_registe_id">注册码</string>
    <string name="hint_terminal_haver">终端持有人</string>
    <string name="hint_registe_user">注册人</string>
    <string name="suppler">供应商</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="detail">明细</string>
    <string name="operation">操作</string>
    <string name="load">加载</string>
    <string name="export">导出</string>
    <string name="number">数量</string>
    <string name="name">名称</string>
    <string name="remark">备注</string>
    <string name="product_date">生产日期</string>
    <string name="out_valid_date">过期日期</string>
    <string name="valid_days">有效期</string>
    <string name="producter">生产厂商</string>
    <string name="product_place">生产地址</string>
    <string name="date">日期</string>
    <string name="product_place_simple">产地</string>
    <string name="discount">折扣</string>
    <string name="unit">单位</string>
    <string name="subtotal">合计</string>
    <string name="pay_type_m">付款方式:</string>
    <string name="pay_money_m">收款金额:</string>
    <string name="time">时间</string>
    <string name="subtotal_price">总价</string>
    <string name="call_name">名称</string>
    <string name="price">单价</string>
    <string name="in_doc_no_m">入货单单号:</string>
    <string name="goods_no_m">商品编号:</string>
    <string name="goods_call_name_m">商品名称:</string>
    <string name="goods_barcode">商品条码:</string>
    <string name="price_m">价格:</string>
    <string name="number_m">数量:</string>
    <string name="unit_m">单位:</string>
    <string name="product_batch_m">生产批次:</string>
    <string name="producer_m">生产商家:</string>
    <string name="product_date_m">生产日期:</string>
    <string name="out_valid_date_m">过期日期:</string>
    <string name="valid_days_m">保质期:</string>
    <string name="days">天</string>
    <string name="product_place_m">商品产地:</string>
    <string name="goods_remark_m">商品备注:</string>
    <string name="trans_fee">运输费用</string>
    <string name="other_fee">其他费用</string>
    <string name="choose_date">选择日期</string>
    <string name="my">我的</string>
    <string name="scrap_doc">废单</string>
    <string name="in_doc_no">入库单号</string>
    <string name="department">部门</string>
    <string name="warehouse">仓库</string>
    <string name="type">类型</string>
    <string name="status">状态</string>
    <string name="purchaser">采购人</string>
    <string name="hint_please_input_user_name">请输入用户名</string>
    <string name="remembered_password">记住密码</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="logoff">离线</string>
    <string name="welcome_user_app">欢迎使用商无忧</string>
    <string name="doc_no">单号</string>
    <string name="doc_maker">制单人</string>
    <string name="add">添加</string>
    <string name="goods_call_name">商品名称</string>
    <string name="barcode">条形码：</string>
    <string name="sync_customer_record">客史同步</string>
    <string name="close">关闭</string>
    <string name="sale_number">售量</string>
    <string name="sale_price">售价</string>
    <string name="cancel_number">退量</string>
    <string name="cancel_price">退价</string>
    <string name="exchange_number">换量</string>
    <string name="given_number">赠量</string>
    <string name="create_date">创建日期</string>
    <string name="upload">上传</string>
    <string name="take_picture">拍照</string>
    <string name="export_select_record">导出所选</string>
    <string name="upload_select_record">上传所选</string>
    <string name="delete_select_record">删除所选</string>
    <string name="update_record">更新全部</string>
    <string name="add_select_record">添加所选</string>
    <string name="sync_select_record">同步所选</string>
    <string name="warehouse_name">仓库名称</string>
    <string name="hint_actin_bar_search">     请输入查询商品</string>
    <string name="server_address_m">服务器：</string>
    <string name="_no">序号</string>
    <string name="submit">提交</string>
    <string name="_xian_jin_zong_ji">现金总计</string>
    <string name="scarp">作废</string>
    <string name="fee">费用</string>
    <string name="pay">结账</string>
    <string name="open_bill_sale">开单销售</string>
    <string name="query_stock">库存查询</string>
    <string name="in_goods">进货入库</string>
    <string name="remote_order">远程抄单</string>
    <string name="system_setting">系统设置</string>
    <string name="ingoods_record">入库记录</string>
    <string name="outgoods_record">销售记录</string>
    <string name="specification">规格：</string>
    <string name="print">打印</string>
    <string name="reset_stock">重置库存</string>
    <string name="customer_record">客史</string>
    <string name="doc_discount">整单折扣</string>
    <string name="cash_discount">现金折扣</string>
    <string name="sale_type">销售类型</string>
    <string name="goods_info">商品信息</string>
    <string name="on_sale">在售</string>
    <string name="old_sale">停售</string>
    <string name="is_pass">跳过</string>
    <string name="_wancheng_remotedoc">结束巡店</string>
    <string name="warehourse">仓库</string>
    <string name="target_customer">目标客户</string>
    <string name="start_remote_order">抄单</string>
    <string name="local_record">本地记录</string>
    <string name="sync_data">数据同步</string>
    <string name="goods">商品</string>
    <string name="_daicha_warehouse">待查仓库</string>
    <string name="stock_number">库存量</string>
    <string name="price_type">价格体系</string>
    <string name="first_customer_price">客史价格优先</string>
    <string name="xlistview_header_hint_normal">上拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉刷新</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="business">业务</string>
    <string name="sale">销售</string>
    <string name="model">型号</string>
    <string name="return_goods">退货</string>
    <string name="exchange_goods">换货</string>
    <string name="transfer">调拨</string>
    <string name="inventory">盘点单</string>
    <string name="others">其他</string>
    <string name="goods_detail_info">产品手册</string>
    <string name="goodsprice_detail_info">产品报价</string>
    <string name="customer_center">客户中心</string>
    <string name="record">记录</string>
    <string name="my_doc">我的销售</string>
    <string name="my_transfer">我的调拨</string>
    <string name="my_inventory">我的盘点</string>
    <string name="caigou_ruku">采购入库</string>
    <string name="xinzeng_shangpin">新增商品</string>
    <string name="caigou_tuihuo">采购退货</string>
    <string name="jiage_chaxun">价格查询</string>
</resources>