<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/m_text"
                android:text="@string/goods_call_name"
                android:textColor="@color/red" />

            <com.ahjswy.cn.views.EditTextWithDel
                android:id="@id/etName"
                style="@style/m_edtext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/m_text"
                android:text="@string/barcode" />

            <com.ahjswy.cn.views.EditTextWithDel
                android:id="@id/etBarcode"
                style="@style/m_edtext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/m_text"
                android:text="@string/specification" />

            <com.ahjswy.cn.views.EditTextWithDel
                android:id="@id/etSpecification"
                style="@style/m_edtext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/m_text"
                android:text="@string/model" />

            <com.ahjswy.cn.views.EditTextWithDel
                android:id="@id/etModel"
                style="@style/m_edtext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/m_text"
                android:text="@string/salecue" />

            <com.ahjswy.cn.views.EditTextWithDel
                android:id="@+id/etSalecue"
                style="@style/m_edtext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/m_text"
                android:text="@string/goods_remark_m" />

            <com.ahjswy.cn.views.EditTextWithDel
                android:id="@+id/etRemark"
                style="@style/m_edtext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="所属类别"
                android:textColor="@color/red"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/btn_goodsClass"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dip"
                android:layout_weight="3.0"
                android:background="@drawable/btn_2_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cbIsDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="允许打折" />

            <CheckBox
                android:id="@+id/cbIsusebatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="批次管理" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/unitRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dish_line_top" />

        <ListView
            android:id="@+id/lvPrices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_select_white_nor" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAddUnit"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1_selector"
                android:text="添加单位" />

            <Button
                android:id="@id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/btn_1_selector"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>