<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_register_message"
        android:textColor="@color/heise"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5.0dip"
            android:gravity="left|center"
            android:text="用户名"
            android:textColor="@color/heise"
            android:textSize="@dimen/dialog_label" />

        <com.ahjswy.cn.views.CleanableEditText
            android:id="@+id/ed_userName"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/login_panel_edit_bg"
            android:drawableLeft="@drawable/hint_user"
            android:ems="10"
            android:hint="@string/hint_please_input_user_name"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textSize="14.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5.0dip"
            android:gravity="left|center"
            android:singleLine="true"
            android:text="密    码"
            android:textColor="@color/heise"
            android:textSize="@dimen/dialog_label" />

        <com.ahjswy.cn.views.CleanableEditText
            android:id="@+id/ed_password"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:background="@drawable/login_panel_edit_bg"
            android:drawableLeft="@drawable/hint_pw"
            android:ems="10"
            android:hint="@string/hint_please_input_password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="14.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="fill_parent"
        android:layout_height="36.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/btn_1_selector"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="fill_parent"
        android:layout_height="36.0dip"
        android:layout_marginLeft="2.0dip"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/btn_1_selector"
        android:text="退出" />

</LinearLayout>